Cider: non functional: use Immutable collections and elipse collections.